# ot-exercises

./: .gitignore  README.md  week1.md
.devcontainer/: devcontainer.json
db-utils/: .coveragerc  pyproject.toml  tasks.py
db-utils/docs/: README.md  architecture.md  changelog.md  guide.md  srs.md  testing.md  time_logs.md
db-utils/src/: gui.py  main.py
db-utils/src/components/: __init__.py  metadata_panel.py  query_panel.py  results_panel.py  table_panel.py  tree_panel.py
db-utils/src/services/: database.py  export.py  query_history.py
db-utils/src/ui/: gui.py
db-utils/src/ui/components/: __init__.py  metadata_panel.py  query_panel.py  results_panel.py
db-utils/tests/: test_database_service.py  test_export_service.py  test_query_history_service.py
exercises/: week3.md
exercises/week2/: README.md
exercises/week2/bank_card/: pyproject.toml
exercises/week2/bank_card/src/: bank_card.py
exercises/week2/bank_card/src/tests/: bank_card_test.py
exercises/week2/unicafe/src/: kassapaate.py  maksukortti.py
exercises/week2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
