[tool.poetry]
package-mode = false

[project]
name = "db-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron",email = "119842456+kahkaar@users.noreply.github.com"}
]
requires-python = "=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
