[tool.poetry]
package-mode = false

[project]
name = "db-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron",email = "119842456+kahkaar@users.noreply.github.com"}
]
requires-python = ">=3.12"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (>=4.0.5,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]
