[project]
name = "bank-card"
version = "0.1.0"
description = ""
authors = [
    {name = "Aaron",email = "119842456+kahkaar@users.noreply.github.com"}
]
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
